--- a/index-1.html
+++ b/index-1.html
@@ -14,21 +14,25 @@ width: 500px;
 </head>
 <body>
 <form>
-<input type="file" onchange="ImageToBase64(this)">
-<p id="output"></p>
-<img src="" id="output-image" width="500">
+<input type="file" onchange="previewFile()"><br>
+ <img src="" id="output-image" style="width:10%">
 </form>
 <script>
-function ImageToBase64(image) {
-var img = image.files[0];
-var reader = new FileReader();
-reader.onloadend = function()
-{
-$("#output").text(reader.result);
-$("#output-image").attr("src", reader.result);
-}
-reader.readAsDataURL(img);
-}
+ function previewFile() {
+                const preview = document.querySelector('#output-image');
+                const file = document.querySelector('input[type=file]').files[0];
+                const reader = new FileReader();
+
+                reader.addEventListener("load", function () {
+                    // convert image file to base64 string
+                    preview.src = reader.result;
+                }, false);
+
+                if (file) {
+                    reader.readAsDataURL(file);
+                }
+            }
+            </script>
 </script>
 </body>
 </html>
