--- a/index.html
+++ b/index.html
@@ -1,15 +1,27 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Np-development</title>
-    <link href="css-style.css" />
-
+    <link href="assets/css/css-style.css" />
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
 </head>
+
 <body>
-    <h1>Welcome</h1>
+    <section data-header-section>
+        <div class="container-fluid">
+            <div class="">Np WebDevloper</div>
+        </div>
+    </section>
+    <section data-body-section></section>
+    <section data-footer-section>
+        <footer></footer>
+    </section>
     <script src="script.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
 </body>
+
 </html>
