--- a/index.html
+++ b/index.html
@@ -6,14 +6,65 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Np-development</title>
-    <link href="assets/css/css-style.css" />
+    <link rel="stylesheet" href="assets/css/css-style.css" />
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
 </head>
 
 <body>
     <section data-header-section>
-        <div class="container-fluid">
-            <div class="">Np WebDevloper</div>
+        <div class="d-flex justify-content-between">
+            <div class="">logo</div>
+            <div class="">
+                <div id="container">
+                    <ul id="menu">
+                        <li>
+                            <a href="#">Home</a>
+                            <ul>
+                                <li><a href="#">Lorem ipsum dolor</a></li>
+                                <li><a href="#">Maecenas lacinia sem</a></li>
+                                <li><a href="#">Suspendisse fringilla</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="#">About Me</a>
+                            <ul>
+                                <li><a href="#">Lorem ipsum dolor</a></li>
+                                <li><a href="#">Maecenas lacinia sem</a></li>
+                                <li><a href="#">Suspendisse fringilla</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="#">Portfolio</a>
+                            <ul>
+                                <li><a href="#">Lorem ipsum dolor</a></li>
+                                <li><a href="#">Maecenas dignissim fermentum luctus</a></li>
+                                <li><a href="#">Suspendisse fringilla</a></li>
+                                <li><a href="#">Lorem ipsum dolor</a></li>
+                                <li><a href="#">Maecenas lacinia sem</a></li>
+                                <li><a href="#">Suspendisse fringilla</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="#">Clients</a>
+                            <ul>
+                                <li><a href="#">Lorem ipsum dolor</a></li>
+                                <li><a href="#">Maecenas lacinia sem</a></li>
+                                <li><a href="#">Suspendisse fringilla</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="#">Contact Me</a>
+                            <ul>
+                                <li><a href="#">Lorem ipsum dolor</a></li>
+                                <li><a href="#">Maecenas dignissim fermentum luctus</a></li>
+                                <li><a href="#">Suspendisse fringilla</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#">Support</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="">login</div>
         </div>
     </section>
     <section data-body-section></section>
