--- a/index-2.html
+++ b/index-2.html
@@ -390,4 +390,5 @@ window.loadTimeData = loadTimeData;
 console.warn('crbug/1173575, non-JS module files deprecated.');
 </script><script>loadTimeData.data = {"header":"Index of LOCATION","headerDateModified":"Date Modified","headerName":"Name","headerSize":"Size","language":"en","parentDirText":"[parent directory]","textdirection":"ltr"};</script><script>start("D:\\np-office\\office\\o24hweb\\");</script>
 <script>onHasParentDirectory();</script>
+<script>addRow("assets","assets",1,0,"0 B",1679302733,"3/20/23, 2:28:53 PM");</script>
 
