--- a/index1.html
+++ b/index1.html
@@ -15,6 +15,6 @@
 
     <div id="content"></div>
 
-    <script src="/mvc/app.js"></script>
+    <script src="mvc/app.js"></script>
 </body>
 </html>
